force-app/main/default/objects/HAM_Stay__c/HAM_Stay__c.object-meta.xml
<CustomObject>
    <description>Represents a single stay or lodging instance related to a trip. Captures address, start and end dates/times, and is used to track where and when staff or stakeholders stayed during travel.</description>
    <label>Stay</label>
    <nameField>
        <displayFormat>STAY-{00000}</displayFormat>
        <label>Stay ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>