force-app/main/default/objects/HAM_Stay__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Check-out date and time for the stay. Must be equal to or later than Start Date/Time.</description>
    <inlineHelpText>Check-out date and time for the stay. Must be equal to or later than Start Date/Time.</inlineHelpText>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>