force-app/main/default/objects/HAM_Stay__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Check-in date and time for the stay.</description>
    <inlineHelpText>Check-in date and time for the stay.</inlineHelpText>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>