force-app/main/default/objects/HAM_Stay__c/fields/Trip_Details__c.field-meta.xml
<CustomField>
    <fullName>Trip_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip Details</label>
    <referenceTo>HAM_Trip_Details__c</referenceTo>
    <relationshipLabel>Stays</relationshipLabel>
    <relationshipName>Stays</relationshipName>
    <type>Lookup</type>
</CustomField>